--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -5,7 +5,7 @@
         <div class="maga-drop-wrap">
 
             <!-- Logo -->
-            <div class="logo">
+            <div class="logo hidden-sm hidden-xs">
                 <a href="@Url.Action("Index", "Home")"><img src="~/Assets/images/logo-4.png" alt=""></a>
             </div>
             <!-- Logo -->
