--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -28,7 +28,19 @@
                                 <h1 class="animated fadeInUp delay-3s">@item.Caption</h1>
                                 <p class="animated fadeInUp delay-4s">@item.ShortDescription</p>
                                 <a class="btn lg blue-btn animated fadeInRight delay-4s" href="@Url.Action("Detail","News", new { id = item.Id })">Detaya git</a>
+                            </div><br />
+                            <div class="hidden-md hidden-lg"  style="padding-top: 600px;">
+                                @if (item.CoverPhoto != null)
+                                {
+                                    <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 500, height = 500 })" alt="@item.Caption">
+
+                                }
+                                else
+                                {
+                                    <img class="animated fadeIn delay-1s" src="#" alt="@item.Caption">
+                                }
                             </div>
+
                         </div>
                     </div>
                 </div>
