--- a/BisLeagues.Presentation/Views/News/Index.cshtml
+++ b/BisLeagues.Presentation/Views/News/Index.cshtml
@@ -4,79 +4,86 @@
     ViewData["Title"] = "Haberler";
     Layout = "~/Views/Shared/_Layout_Heading.cshtml";
 }
-@section Heading{
 
-
-
-    <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs hidden-xs">
-        <div class="container">
-            <h2>Haberler</h2>
-            <ul class="breadcrumbs">
-                <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-                <li>Haberler</li>
-            </ul>
+@if (Model.Count() > 0)
+{
+    @section Heading{
+        <!-- Page Heading & Breadcrumbs  -->
+        <div class="page-heading-breadcrumbs hidden-xs">
+            <div class="container">
+                <h2>Haberler</h2>
+                <ul class="breadcrumbs">
+                    <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+                    <li>Haberler</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-    </div>
-    @*<div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">*@
+        <!-- Page Heading & Breadcrumbs  -->
+        <!-- Page Heading banner -->
+        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
+        </div>
+        @*<div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">*@
 
-    <!-- Page Heading banner -->
+        <!-- Page Heading banner -->
 
-}
+    }
+    <div class="theme-padding white-bg">
+        <div class="container">
+            <div class="row">
 
+                <!-- Blog Content -->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 r-full-width">
+                    @foreach (var item in Model)
+                    {
 
-<div class="theme-padding white-bg">
-    <div class="container">
-        <div class="row">
-
-            <!-- Blog Content -->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 r-full-width">
-                @foreach (var item in Model)
-                {
-
-                    <div class="large-post theme-padding-bottom">
-                        <!-- Post Img -->
-                        <div class="large-post-img">
-                            @if (item.CoverPhoto != null)
-                            {
-                                <img src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 871, height = 490 })" alt="">
-                            }
-                            @*<span class="blog-title-batch">Major League Socer</span>*@
-                        </div>
-                        <!-- Post Img -->
-                        <!-- Detail -->
-                        <div class="large-post-detail">
-                            <div class="author-header">
-                                <div class="aurhor-img-name pull-left">
-                                    @*<img src="images/aurthor-img.jpg" alt="">*@
-                                    <strong>by <i class="red-color">BisLeague</i></strong>
-                                    <span> @TimeZoneInfo.ConvertTimeFromUtc(item.CreatedOnUtc, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy")</span>
-                                </div>
-                                @*<div class="share-option pull-right">
-                                        <span id="share-btn1"><i class="fa fa-share-alt"></i>Share</span>
-                                        <div id="show-social-icon1" class="on-hover-share">
-                                            <ul class="social-icons">
-                                                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
-                                                <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>*@
+                        <div class="large-post theme-padding-bottom">
+                            <!-- Post Img -->
+                            <div class="large-post-img">
+                                @if (item.CoverPhoto != null)
+                                {
+                                    <img src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 871, height = 490 })" alt="">
+                                }
+                                @*<span class="blog-title-batch">Major League Socer</span>*@
                             </div>
-                            <h2><a href="@Url.Action("Detail", "News", new { item.Id })">@item.Caption</a></h2>
-                            <p>@item.ShortDescription</p>
-                            <a class="btn gary-btn" href="@Url.Action("Detail", "News", new { item.Id })"><i>+</i>Haberi Oku</a>
-                        </div>
-                        <!-- Detail -->
+                            <!-- Post Img -->
+                            <!-- Detail -->
+                            <div class="large-post-detail">
+                                <div class="author-header">
+                                    <div class="aurhor-img-name pull-left">
+                                        @*<img src="images/aurthor-img.jpg" alt="">*@
+                                        <strong>by <i class="red-color">BisLeague</i></strong>
+                                        <span> @TimeZoneInfo.ConvertTimeFromUtc(item.CreatedOnUtc, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy")</span>
+                                    </div>
+                                    @*<div class="share-option pull-right">
+                                            <span id="share-btn1"><i class="fa fa-share-alt"></i>Share</span>
+                                            <div id="show-social-icon1" class="on-hover-share">
+                                                <ul class="social-icons">
+                                                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                                                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                                                    <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
+                                                    <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>*@
+                                </div>
+                                <h2><a href="@Url.Action("Detail", "News", new { item.Id })">@item.Caption</a></h2>
+                                <p>@item.ShortDescription</p>
+                                <a class="btn gary-btn" href="@Url.Action("Detail", "News", new { item.Id })"><i>+</i>Haberi Oku</a>
+                            </div>
+                            <!-- Detail -->
 
-                    </div>
-                }
+                        </div>
+                    }
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div style="margin:auto;width: 50%;margin-top:100px; margin-bottom:100px;">
+        <h1>Ufukta haber yok !</h1>
+    </div>
+}
+
+
