--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -29,7 +29,7 @@
                                 <p class="animated fadeInUp delay-4s">@item.ShortDescription</p>
                                 <a class="btn lg blue-btn animated fadeInRight delay-4s" href="@Url.Action("Detail","News", new { id = item.Id })">Detaya git</a>
                             </div><br />
-                            <div class="hidden-md hidden-lg"  style="padding-top: 600px;">
+                            <div class="hidden-md hidden-lg"  style="padding-top: 600px; margin-bottom:100px;">
                                 @if (item.CoverPhoto != null)
                                 {
                                     <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 400, height = 200 })" alt="@item.Caption">
