--- a/BisLeagues.Presentation/Views/Shared/Components/PointTable/Default.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/Components/PointTable/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Point Table -->
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 r-full-width">
-    <div class="last-matches styel-1">
+    <div class="last-matches styel-3">
         <h3><span>PUAN TABLOSU</span></h3>
         <table class="table table-bordered table-hover">
             <thead>
@@ -19,7 +19,7 @@
 
                     <tr>
                         <td>@order</td>
-                        <td>
+                        <td style="text-align:center;">
                             <a href="@Url.Action("Detail", "Team", new { row.Team.Id })">
                                 @row.Team.Name
                             </a>
