--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -11,12 +11,12 @@
                 <!-- Item -->
                 <div class="item @{if (first) { first = false; @Html.Raw("active"); }}">
                     <img class="fullscreen" src="@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 1725, height = 1159 })"  alt="">
-                    <div class="position-center-x full-width">
+                    <div class="position-center-x full-width" style="margin-top:50px;">
                         <div class="container">
                             <div class="banner-layer pull-right">
                                 @if (item.CoverPhoto != null)
                                 {
-                                    <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 500, height = 500 })" alt="@item.Caption">
+                                    <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 620, height = 400    })" alt="@item.Caption">
 
                                 }
                                 else
