--- a/BisLeagues.Presentation/Views/Shared/Components/PointTable/Default.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/Components/PointTable/Default.cshtml
@@ -1,36 +1,35 @@
 ﻿<!-- Point Table -->
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 r-full-width">
-    <div class="last-matches styel-3">
-        <h3><span>PUAN TABLOSU</span></h3>
-        <table class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Team</th>
-                    <th>M.S.</th>
-                    <th>Av.</th>
-                    <th>P.</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{int order = 1; }
-                @foreach (var row in Model)
-                {
 
-                    <tr>
-                        <td>@order</td>
-                        <td style="text-align:center;">
-                            <a href="@Url.Action("Detail", "Team", new { row.Team.Id })">
-                                @row.Team.Name
-                            </a>
-                        </td>
-                        <td>@row.MatchCount</td>
-                        <td>@row.Average</td>
-                        <td>@row.Point</td>
-                    </tr>
-                    order++;
-                }
-            </tbody>
-        </table>
-    </div>
+<h3><span>PUAN TABLOSU</span></h3>
+<div class="last-matches styel-3">
+    <table class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Takım</th>
+                <th>M.S.</th>
+                <th>Av.</th>
+                <th>P.</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{int order = 1; }
+            @foreach (var row in Model)
+            {
+
+                <tr>
+                    <td>@order</td>
+                    <td style="text-align:center;">
+                        <a href="@Url.Action("Detail", "Team", new { row.Team.Id })">
+                            @row.Team.Name
+                        </a>
+                    </td>
+                    <td>@row.MatchCount</td>
+                    <td>@row.Average</td>
+                    <td>@row.Point</td>
+                </tr>
+                order++;
+            }
+        </tbody>
+    </table>
 </div>
