--- a/BisLeagues.Presentation/Views/Profile/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Profile/Detail.cshtml
@@ -39,8 +39,8 @@
             <!-- Team without Hover -->
             <div class="col-lg-3 col-md-3 col-sm-5">
                 <div class="team-column without-hover">
-                    <img src="@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 269, height = 416 })" alt="">
-                    <div class="team-detail">
+                    <img src="@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 269, height = 269 })" alt="">
+                    <div class="team-detail" style="position:initial !important;">
                         <h5>@Model.User.FirstName @Model.User.LastName</h5>
                         <span class="desination"></span>
                         <div class="detail-inner">
