--- a/BisLeagues.Presentation/Views/Team/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Team/Detail.cshtml
@@ -40,8 +40,8 @@
                 <!-- Team without Hover -->
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <div class="team-column without-hover">
-                        <img src="@Url.Action("Resize", "Image", new { url = Model.Team.Logo.Path, width = 269, height = 416 })" alt="">
-                        <div class="team-detail">
+                        <img src="@Url.Action("Resize", "Image", new { url = Model.Team.Logo.Path, width = 269, height = 269 })" alt="">
+                        <div class="team-detail" style="position:initial !important;">
                             <h5>@Model.Team.Name</h5>
                             <span class="desination">Defender</span>
                             <div class="detail-inner">
