--- a/BisLeagues.Presentation/wwwroot/Assets/css/responsive.css
+++ b/BisLeagues.Presentation/wwwroot/Assets/css/responsive.css
@@ -97,7 +97,7 @@
 
 .nav-list{ display: none;}
 
-.large-post-detail{ margin: -30px 0 0 30px;}
+.large-post-detail{ margin: 0 0 0 30px;}
 .large-post-detail h2{ font-size: 18px;}
 .large-post-detail p{ font-size: 13px;}
 .blog-list-View .large-post-img{ margin: 0 0 30px;}
