--- a/BisLeagues.Presentation/Views/News/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/News/Detail.cshtml
@@ -69,7 +69,7 @@
         <div class="row">
 
             <!-- Match Detail Content -->
-            <div class="col-lg-12 col-md-12 col-sm-7 col-xs-12">
+            <div class="col-lg-10 col-md-10 col-sm-7 col-xs-12">
 
                 <!-- Detail -->
                 <div class="match-detail-deep theme-padding-bottom">
@@ -81,12 +81,12 @@
                     </div><br />
                     @if (Model.New.CoverPhoto != null)
                     {
-                        <div class="col-md-12">
+                        @*<div class="col-md-12">
 
-                            <div class="video video-post">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.New.VideoCoverPhoto.Path, width = 1200, height = 500 })" alt="">
+                            <div class="video video-post center">
+                                <img src="@Url.Action("Resize", "Image", new { url = Model.New.VideoCoverPhoto.Path, width = 600, height = 350 })" alt="">
                             </div>
-                        </div>
+                        </div>*@
                     }
                     @if (Model.New.Match != null && Model.Result.Scores != null && Model.Result.Scores.Count() > 0)
                     {
@@ -128,10 +128,10 @@
                     }
                     @if (Model.New.VideoCoverPhoto != null && !string.IsNullOrWhiteSpace(Model.New.VideoUrl))
                     {
-                        <div class="col-md-5">
+                        <div class="col-md-12">
 
                             <div class="video video-post">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.New.VideoCoverPhoto.Path, width = 1200, height = 500 })" alt="">
+                                <img src="@Url.Action("Resize", "Image", new { url = Model.New.VideoCoverPhoto.Path, width = 600, height = 350 })" alt="">
                                 <span class="play-lable fa fa-video-camera"></span>
                                 <a class="position-center-center play-icon" href="@Model.New.VideoUrl" data-rel="prettyPhoto[video]"><i class="fa fa-video-camera"></i></a>
                             </div>
