--- a/BisLeagues.Presentation/Views/Home/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Home/Index.cshtml
@@ -80,8 +80,8 @@
                                         <tr>
                                             <th>#</th>
                                             <th>AD</th>
-                                            <th>TKM</th>
-                                            <th>Gol</th>
+                                            <th>TAKIM</th>
+                                            <th>DEĞER</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -119,8 +119,8 @@
                                         <tr>
                                             <th>#</th>
                                             <th>AD</th>
-                                            <th>TKM</th>
-                                            <th>DGR</th>
+                                            <th>TAKIM</th>
+                                            <th>DEĞER</th>
                                         </tr>
                                     </thead>
                                     <tbody>
