--- a/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,6 +52,12 @@
                         </a>
                     </li>
                     <li class="nav-item " id="menuCaseIndex">
+                        <a class="nav-link" href="@Url.Action("Create", "News")">
+                            <i class="material-icons">list</i>
+                            <p>Haber Ekle</p>
+                        </a>
+                    </li>
+                    <li class="nav-item " id="menuCaseIndex">
                         <a class="nav-link" href="@Url.Action("List", "News")">
                             <i class="material-icons">list</i>
                             <p>Haberleri Gör</p>
