--- a/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -39,28 +39,34 @@
             </div>
             <div class="sidebar-wrapper">
                 <ul class="nav">
-                    <li class="nav-item " id="menuCustomerCreate">
+                    <li class="nav-item" >
                         <a class="nav-link" href="@Url.Action("Create", "Match")">
                             <i class="material-icons">sports_soccer</i>
                             <p>Maç Oluştur</p>
                         </a>
                     </li>
-                    <li class="nav-item " id="menuCaseIndex">
+                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("List", "Match")">
                             <i class="material-icons">list</i>
                             <p>Maçları Gör</p>
                         </a>
                     </li>
-                    <li class="nav-item " id="menuCaseIndex">
+                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Create", "News")">
-                            <i class="material-icons">list</i>
+                            <i class="material-icons">add</i>
                             <p>Haber Ekle</p>
                         </a>
                     </li>
-                    <li class="nav-item " id="menuCaseIndex">
+                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("List", "News")">
-                            <i class="material-icons">list</i>
+                            <i class="material-icons">view_module</i>
                             <p>Haberleri Gör</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("List", "Team")">
+                            <i class="material-icons">pan_tool</i>
+                            <p>Takım Onay Listesi</p>
                         </a>
                     </li>
                 </ul>
